// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BillingErrorState > Snapshot tests > should match snapshot with all props 1`] = `
<div
  aria-live="assertive"
  class="mx-auto max-w-2xl rounded-xl border border-red-200 bg-red-50 p-6 shadow-sm"
  role="alert"
>
  <div
    class="mb-4 flex items-start gap-4"
  >
    <svg
      aria-hidden="true"
      class="h-12 w-12 text-red-500"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Alert
      </title>
      <path
        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="flex-1"
    >
      <h3
        class="font-bold text-red-900 text-xl"
      >
        Título completo
      </h3>
    </div>
  </div>
  <p
    class="mb-6 pl-16 text-red-800"
  >
    Mensaje completo de error
  </p>
  <div
    class="flex justify-center"
  >
    <button
      aria-label="Etiqueta completa"
      class="inline-flex items-center gap-2 rounded-lg bg-red-600 px-6 py-3 font-medium text-white transition-colors duration-200 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      Etiqueta completa
    </button>
  </div>
</div>
`;

exports[`BillingErrorState > Snapshot tests > should match snapshot with custom retry label 1`] = `
<div
  aria-live="assertive"
  class="mx-auto max-w-2xl rounded-xl border border-red-200 bg-red-50 p-6 shadow-sm"
  role="alert"
>
  <div
    class="mb-4 flex items-start gap-4"
  >
    <svg
      aria-hidden="true"
      class="h-12 w-12 text-red-500"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Alert
      </title>
      <path
        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="flex-1"
    >
      <h3
        class="font-bold text-red-900 text-xl"
      >
        Error al cargar los datos
      </h3>
    </div>
  </div>
  <p
    class="mb-6 pl-16 text-red-800"
  >
    No se pudo conectar con el servidor
  </p>
  <div
    class="flex justify-center"
  >
    <button
      aria-label="Volver a cargar"
      class="inline-flex items-center gap-2 rounded-lg bg-red-600 px-6 py-3 font-medium text-white transition-colors duration-200 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      Volver a cargar
    </button>
  </div>
</div>
`;

exports[`BillingErrorState > Snapshot tests > should match snapshot with custom title 1`] = `
<div
  aria-live="assertive"
  class="mx-auto max-w-2xl rounded-xl border border-red-200 bg-red-50 p-6 shadow-sm"
  role="alert"
>
  <div
    class="mb-4 flex items-start gap-4"
  >
    <svg
      aria-hidden="true"
      class="h-12 w-12 text-red-500"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Alert
      </title>
      <path
        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="flex-1"
    >
      <h3
        class="font-bold text-red-900 text-xl"
      >
        Error personalizado
      </h3>
    </div>
  </div>
  <p
    class="mb-6 pl-16 text-red-800"
  >
    Mensaje de error
  </p>
</div>
`;

exports[`BillingErrorState > Snapshot tests > should match snapshot with default title 1`] = `
<div
  aria-live="assertive"
  class="mx-auto max-w-2xl rounded-xl border border-red-200 bg-red-50 p-6 shadow-sm"
  role="alert"
>
  <div
    class="mb-4 flex items-start gap-4"
  >
    <svg
      aria-hidden="true"
      class="h-12 w-12 text-red-500"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Alert
      </title>
      <path
        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="flex-1"
    >
      <h3
        class="font-bold text-red-900 text-xl"
      >
        Error al cargar los datos
      </h3>
    </div>
  </div>
  <p
    class="mb-6 pl-16 text-red-800"
  >
    No se pudo conectar con el servidor
  </p>
</div>
`;

exports[`BillingErrorState > Snapshot tests > should match snapshot with retry button 1`] = `
<div
  aria-live="assertive"
  class="mx-auto max-w-2xl rounded-xl border border-red-200 bg-red-50 p-6 shadow-sm"
  role="alert"
>
  <div
    class="mb-4 flex items-start gap-4"
  >
    <svg
      aria-hidden="true"
      class="h-12 w-12 text-red-500"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Alert
      </title>
      <path
        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="flex-1"
    >
      <h3
        class="font-bold text-red-900 text-xl"
      >
        Error al cargar los datos
      </h3>
    </div>
  </div>
  <p
    class="mb-6 pl-16 text-red-800"
  >
    No se pudo conectar con el servidor
  </p>
  <div
    class="flex justify-center"
  >
    <button
      aria-label="Reintentar"
      class="inline-flex items-center gap-2 rounded-lg bg-red-600 px-6 py-3 font-medium text-white transition-colors duration-200 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      Reintentar
    </button>
  </div>
</div>
`;
